--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Search Engine</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <h1>Google Search Results</h1>
+    <style>
+        h1{
+            text-align: center;
+            font-size:80px;
+            color: chocolate;
+        }
+        form{
+            text-align: center;
+        }
+    </style>
+    <div class="container">
+    <form id="form" autocomplete="off">
+        <div class="form-group">
+        <input type="text" id="search" class="form-control" placeholder="search">
+        </div> 
+        <div class="form-group">
+            <button class="btn btn-danger btn-block">search</button>
+        </div> 
+    </form>
+    <div id="result">
 
+    </div>
+    </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="main.js"></script>
 </html>
