--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Search Engine</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Google Search Results</h1>
-    <style>
-        h1{
-            text-align: center;
-            font-size:80px;
-            color: chocolate;
-        }
-        form{
-            text-align: center;
-        }
-    </style>
     <div class="container">
     <form id="form" autocomplete="off">
         <div class="form-group">
