--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Search Engine</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <h1>Google Search Results</h1>
+    <h1>Google Search </h1>
     <div class="container">
     <form id="form" autocomplete="off">
         <div class="form-group">
-        <input type="text" id="search" class="form-control" placeholder="search">
+        <input type="text" id="search" class="form-control form-control-lg form-control-borderless" placeholder="search topics or keywords">
         </div> 
         <div class="form-group">
-            <button class="btn btn-danger btn-block">search</button>
+            <button class="btn btn-lg btn-success btn-block">search</button>
         </div> 
     </form>
     <div id="result">
